added small detail to wording

--- a/recipes/boiledegg.html
+++ b/recipes/boiledegg.html
@@ -27,7 +27,7 @@
     <p>Cooking time!</p>
     <ol>
         <li>Prepare the number of eggs by taking them out of the fridge, you do not need to let them reach room temperature before cooking.</li>
-        <li>Poke a hole in the bottom of the egg, do this at the rounder part not the pointy-er part of the egg.<p>     Doing this will help prevent the egg from cracking when you first place it in the water.</p></li>
+        <li>Poke a small hole in the bottom of the egg, do this at the rounder part not the pointy-er part of the egg.<p>     Doing this will help prevent the egg from cracking when you first place it in the water.</p></li>
         <li>Add enough water to cover the tops of the eggs to your container of choice.</li>
         <li>Heat the water until it just starts to boil.</li>
         <li>Add your eggs to the water.</li>
