--- a/index.html
+++ b/index.html
@@ -7,5 +7,5 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/boiledegg.html">Chow Mein Tutorial</a>
+    <a href="recipes/boiledegg.html">Hard boil eggs Tutorial</a>
 </body>
