--- a/index.html
+++ b/index.html
@@ -8,4 +8,5 @@
 <body>
     <h1>Odin Recipes</h1>
     <a href="recipes/boiledegg.html">Hard boil eggs Tutorial</a>
+    <a href="recipes/doritostacoslocos.html">Doritos Taco Loco Tutorial</a>
 </body>
