--- a/recipes/boiledegg.html
+++ b/recipes/boiledegg.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html lang="en"></html>
+<html lang="en">
 <head>
     <meta charset="utf-8">
     <title>How to Boil an Egg</title>
@@ -36,3 +36,4 @@
         <iframe width="560" height="315" src="https://www.youtube.com/embed/arPrLEdbE4A?si=YHeKp2AYZZ1ZeeIL" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     </ol>
 </body>
+</html>
