fixed html container

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html lang="en"></html>
+<html lang="en">
 <head>
     <meta charset="utf-8">
     <title>Odin Recipes</title>
@@ -10,3 +10,4 @@
     <a href="recipes/boiledegg.html">Hard boil eggs Tutorial</a>
     <p><a href="recipes/doritostacoslocos.html">Doritos Tacos Locos Tutorial</a></p>
 </body>
+</html>
