fixed html container

--- a/recipes/doritostacoslocos.html
+++ b/recipes/doritostacoslocos.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html lang="en"></html>
+<html lang="en">
 <head>
     <meta charset="utf-8">
     <title>How to Make a Doritos Locos Tacos Supreme Combo</title>
@@ -9,4 +9,17 @@
 <body>
     <h1>Doritos Locos Tacos Supreme Combo Tutorial</h1>
     <img src="../recipe-images/doritostacos.jpg" alt="image of doritos tacos from Taco Bell" height="300" width="573">
+    <p><strong>Doritos Tacos Locos is a complex dish, but you can do it!</strong> It consists of a combination of two Doritos Tacos Locos, one regular size fries, and 20oz of delicous <em>Mountain Dew.</em></p>
+    <ul>
+        <p>To make this meal you will need the following:</p>
+        <li>Doritos</li>
+        <li><strong>SALT</strong></li>
+        <li><em>Mountain Dew</em></li>
+        <li>Tacos</li>
+    </ul>
+    <ol>
+        <p><strong>Here's how to make a hearty <em>Doritos Tacos Locos Supreme Combo</em> Meal!!</strong></p>
+        <li></li>
+    </ol>
 </body>
+</html>
