--- a/recipes/doritostacoslocos.html
+++ b/recipes/doritostacoslocos.html
@@ -16,10 +16,14 @@
         <li><strong>SALT</strong></li>
         <li><em>Mountain Dew</em></li>
         <li>Tacos</li>
+        <li>A League of Legends Account</li>
     </ul>
     <ol>
         <p><strong>Here's how to make a hearty <em>Doritos Tacos Locos Supreme Combo</em> Meal!!</strong></p>
-        <li></li>
+        <li>Prepare your hands by covering them with delicous orange <em>Dorito</em> dust</li>
+        <li>Then, add a large helping of dust onto your newly seasoned orange hands</li>
+        <li>Finally, start blaming your team and complaining that your jungler keeps feeding</li>
+        <li><em>Congratualtions!!!</em> You are now a salty <em>Mountain Dew</em> drinking degen LoL player that is covered in <em>Dorito</em> dust!! Now go touch some grass.</li>
     </ol>
 </body>
 </html>
