added buttons to links

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/boiledegg.html">Hard boil eggs Tutorial</a>
-    <p><a href="recipes/doritostacoslocos.html">Doritos Tacos Locos Tutorial</a></p>
+    <a href="recipes/boiledegg.html"><button>Hard boil eggs Tutorial</button></a>
+    <p><a href="recipes/doritostacoslocos.html"><button>Doritos Tacos Locos Tutorial</button></a></p>
 </body>
 </html>
