added css styling and spelling corrections

--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 <head>
     <meta charset="utf-8">
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="recipes/stylesheet.css">
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    <h1 class="title">Odin Recipes</h1>
     <a href="recipes/boiledegg.html"><button>Hard boil eggs Tutorial</button></a>
     <p><a href="recipes/doritostacoslocos.html"><button>Doritos Tacos Locos Tutorial</button></a></p>
 </body>
