--- a/recipes/boiledegg.html
+++ b/recipes/boiledegg.html
@@ -4,16 +4,17 @@
 <head>
     <meta charset="utf-8">
     <title>How to Boil an Egg</title>
+    <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
-    <h1>Boiled Egg Tutorial</h1>
-    <img src="../recipe-images/hardboiledegg.jpeg" alt="two halves of a hard boiled egg" height="1125" width="1500">
+    <h1 class="title">Boiled Egg Tutorial</h1>
+    <img class="egg" src="../recipe-images/hardboiledegg.jpeg" alt="two halves of a hard boiled egg" height="1125" width="1500">
     <p><strong>The ideal hard boiled egg is boiled until the egg is hard.</strong> This may take 8 miles or 15 years in as an affiliated 
         gang member (5 years if in a third world country or warzone). 
         <strong>Fun fact:</strong> eggs boiled in high altitude environments require longer cook times as the boiling point of water is lower!</p>
     <p>
 
-        <strong>Ingredients required:</strong>
+        <strong class="trans">Ingredients required:</strong>
     </p>
     <ul>
         <li>container capable of withstanding water and heat</li>
@@ -24,7 +25,7 @@
         <li>a hype-man</li>
         <li>optional: eggs</li>
     </ul>
-    <p>Cooking time!</p>
+    <p class="trans">Cooking time!</p>
     <ol>
         <li>Prepare the number of eggs by taking them out of the fridge, you do not need to let them reach room temperature before cooking.</li>
         <li>Poke a small hole in the bottom of the egg, do this at the rounder part not the pointy-er part of the egg.<p>     Doing this will help prevent the egg from cracking when you first place it in the water.</p></li>
@@ -32,8 +33,9 @@
         <li>Heat the water until it just starts to boil.</li>
         <li>Add your eggs to the water.</li>
         <li>Heat/harden the eggs for 8 miles until sufficiently hardened.<p>Alternatively, enter a rap battle during your shift at the pressing plant. Then, defeat Papa Doc by pre-emtively using using his insults and revealing his name is Clarence and went to a private school.</p></li>
-        <li>Congratualtions, you are now a rap God.</li>
+        <li>Congratualtions, you are now a Rap God.</li>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/arPrLEdbE4A?si=YHeKp2AYZZ1ZeeIL" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     </ol>
+    <a href="../index.html"><button>Return Home</button></a>
 </body>
 </html>
