--- a/recipes/doritostacoslocos.html
+++ b/recipes/doritostacoslocos.html
@@ -4,26 +4,31 @@
 <head>
     <meta charset="utf-8">
     <title>How to Make a Doritos Locos Tacos Supreme Combo</title>
+    <link rel="stylesheet" href="stylesheet.css">
 </head>
 
 <body>
-    <h1>Doritos Locos Tacos Supreme Combo Tutorial</h1>
+    <h1 class="title">Doritos Locos Tacos Supreme Combo Tutorial</h1>
     <img src="../recipe-images/doritostacos.jpg" alt="image of doritos tacos from Taco Bell" height="300" width="573">
     <p><strong>Doritos Tacos Locos is a complex dish, but you can do it!</strong> It consists of a combination of two Doritos Tacos Locos, one regular size fries, and 20oz of delicous <em>Mountain Dew.</em></p>
     <ul>
         <p>To make this meal you will need the following:</p>
-        <li>Doritos</li>
+        <li><em id="dorito">Doritos</em></li>
         <li><strong>SALT</strong></li>
-        <li><em>Mountain Dew</em></li>
+        <li class="acid"><em>Mountain Dew</em></li>
         <li>Tacos</li>
         <li>A League of Legends Account</li>
     </ul>
     <ol>
-        <p><strong>Here's how to make a hearty <em>Doritos Tacos Locos Supreme Combo</em> Meal!!</strong></p>
-        <li>Prepare your hands by covering them with delicous orange <em>Dorito</em> dust</li>
+        <p><strong class="trans">Here's how to make a hearty <em id="dorito">Doritos Tacos Locos Supreme Combo</em> Meal!!</strong></p>
+        <li>Prepare your hands by covering them with delicous orange <em id="dorito">Dorito</em> dust</li>
         <li>Then, add a large helping of dust onto your newly seasoned orange hands</li>
         <li>Finally, start blaming your team and complaining that your jungler keeps feeding</li>
-        <li><em>Congratualtions!!!</em> You are now a salty <em>Mountain Dew</em> drinking degen LoL player that is covered in <em>Dorito</em> dust!! Now go touch some grass.</li>
+        <li><em>Congratualtions!!!</em> You are now a salty <em class="acid">Mountain Dew</em> drinking degen LoL player that is covered in <em id="dorito">Dorito</em> dust!! Now go touch some grass.</li>
     </ol>
+    <p></p>
+    <p></p>
+    <p></p>
+    <a href="../index.html"><button>Return Home</button></a>
 </body>
 </html>
