css changes part 1

--- a/recipes/doritostacoslocos.html
+++ b/recipes/doritostacoslocos.html
@@ -9,7 +9,7 @@
 
 <body>
     <h1 class="title">Doritos Locos Tacos Supreme Combo Tutorial</h1>
-    <img src="../recipe-images/doritostacos.jpg" alt="image of doritos tacos from Taco Bell" height="300" width="573">
+    <img class="taco" src="../recipe-images/doritostacos.jpg" alt="image of doritos tacos from Taco Bell" height="300" width="573">
     <p><strong>Doritos Tacos Locos is a complex dish, but you can do it!</strong> It consists of a combination of two Doritos Tacos Locos, one regular size fries, and 20oz of delicous <em>Mountain Dew.</em></p>
     <ul>
         <p>To make this meal you will need the following:</p>
