inline and inlineblock practice

--- a/recipes/boiledegg.html
+++ b/recipes/boiledegg.html
@@ -20,9 +20,9 @@
         <li>container capable of withstanding water and heat</li>
         <li>heat capable of hardening eggs</li>
         <li>water</li>
-        <li>heat/fire</li>
-        <li>mouth capable of dropping sick beats and spitting mad fire</li>
-        <li>a hype-man</li>
+        <li>heat/<span class="fire">fire</span></li>
+        <li>mouth capable of dropping sick beats and spitting mad <span class="fire">fire</span></li>
+        <li>a <span class="noun"> hype-man</span></li>
         <li>optional: eggs</li>
     </ul>
     <p class="trans">Cooking time!</p>
@@ -32,8 +32,8 @@
         <li>Add enough water to cover the tops of the eggs to your container of choice.</li>
         <li>Heat the water until it just starts to boil.</li>
         <li>Add your eggs to the water.</li>
-        <li>Heat/harden the eggs for 8 miles until sufficiently hardened.<p>Alternatively, enter a rap battle during your shift at the pressing plant. Then, defeat Papa Doc by pre-emtively using using his insults and revealing his name is Clarence and went to a private school.</p></li>
-        <li>Congratualtions, you are now a Rap God.</li>
+        <li>Heat/harden the eggs for 8 miles until sufficiently hardened.<p>Alternatively, enter a rap battle during your shift at the pressing plant. Then, defeat <span class="noun">Papa Doc</span> by pre-emtively using using his insults and revealing his name is Clarence and went to a private school.</p></li>
+        <li>Congratualtions, you are now a <span class="noun">Rap God.</span></li>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/arPrLEdbE4A?si=YHeKp2AYZZ1ZeeIL" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     </ol>
     <a href="../index.html"><button>Return Home</button></a>
