--- a/recipes/doritostacoslocos.html
+++ b/recipes/doritostacoslocos.html
@@ -15,7 +15,7 @@
         <p>To make this meal you will need the following:</p>
         <li><em id="dorito">Doritos</em></li>
         <li><strong>SALT</strong></li>
-        <li class="acid"><em>Mountain Dew</em></li>
+        <li class="acid">One<em> Mountain Dew</em></li>
         <li>Tacos</li>
         <li>A League of Legends Account</li>
     </ul>
