added meme image and button

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1 class="title">Odin Recipes</h1>
     <a href="recipes/boiledegg.html"><button>Hard boil eggs Tutorial</button></a>
     <p><a href="recipes/doritostacoslocos.html"><button>Doritos Tacos Locos Tutorial</button></a></p>
+    <a href="memes/val-blooper.jpg"><button>Memes</button></a>
 </body>
 </html>
